src/test/ui/E0508.nll.stderr
error[E0508]: cannot move out of type `[NonCopy; 1]`, a non-copy array
  --> $DIR/E0508.rs:5:18
   |
LL |     let _value = array[0];  //~ ERROR [E0508]
   |                  ^^^^^^^^
   |                  |
   |                  cannot move out of here
   |                  help: consider borrowing here: `&array[0]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0508`.
